--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
     .header {
       text-align: center;
-    }
+      position:relative;
+        top: 0px;
+        background-color: aqua;
+        right: 0px;}
+        
+    
 
     .menu-container1 {
       background-color: yellow;
@@ -109,6 +114,11 @@
     .description {
       font-size: 16px;
     }
+    .main-image{
+      min-width: 10%;
+    max-width: 20%;
+    min-height: 10%;
+    max-height: 20%;}
   </style>
 </head>
 
@@ -117,6 +127,7 @@
     <div class="main-container">
       <div class="header">
         <h1><b>Perfect Pizza</b></h1>
+        <img class="main-image" src="https://plus.unsplash.com/premium_photo-1673823195780-8444a76cfde6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80">
       </div>
       <hr />
       <div class="menu-container1">
