--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     .header {
       text-align: center;
+      
       position:relative;
         top: 0px;
         background-color: aqua;
@@ -110,7 +111,9 @@
       font-size: 18px;
       margin-bottom: 10px;
     }
-
+.est{
+  text-align: center;
+}
     .description {
       font-size: 16px;
     }
@@ -126,7 +129,8 @@
   <main>
     <div class="main-container">
       <div class="header">
-        <h1><b>Perfect Pizza</b></h1>
+        <h1><b>Pizza e'Vino</b></h1>
+        <p class="est">est 2024</p>
         <img class="main-image" src="https://plus.unsplash.com/premium_photo-1673823195780-8444a76cfde6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80">
       </div>
       <hr />
