--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <style>
     body {
 
-      background-image: url("images/pizza.jpg");
+      background-image: url("images/462773.jpg");
       background-size: contain;
       background-position: center;
 
@@ -51,18 +51,19 @@
 
     .footer {
       background-color: greenyellow;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
-      margin: 10px;
-      max-height: fit-content;
-      padding: 10px;
-      font-size: 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  font-size: 18px;
+  position: static;
+  bottom: 0;
+  left: 0;
+  right: 0;
     }
 
     .footer-div {
-      display: flex;
+      position: relative;
       align-items: center;
     }
 
